# libiodine

./: .gitignore  Cargo.toml  README.md  UsageInC.md  build.rs
.cargo/: config.toml
include/: libiodine.h
src/: convert.rs  error.rs  gif.rs  interface.rs  jpeg.rs  lib.rs  parameters.rs  png.rs  resize.rs  tiff.rs  webp.rs
tests/: compress_to_size.rs  convert.rs  gif.rs  integration.rs  jpeg.rs  metadata.rs  png.rs  tiff.rs  webp.rs
tests/msvc/: TestIodine.sln
tests/msvc/TestIodine/: FileMapping.cpp  FileMapping.h  Test.cpp  Test.h  TestIodine.vcxproj  TestIodine.vcxproj.filters  main.cpp
