[package]
name = "libiodine"
version = "0.17.1"
authors = ["Matteo Paonessa <matteo.paonessa@gmail.com>", "Tyler Parret True <https://github.com/OwlHowlinMornSky>"]
edition = "2021"
categories = ["multimedia::images"]
keywords = [
    "compression",
    "jpeg",
    "png",
    "gif",
    "webp"
]
description = "A lossy/lossless image compression library."
readme = "README.md"
exclude = [
    "tests/*",
    ".github/*",
    ".idea/*",
]
homepage = "https://github.com/OwlHowlinMornSky/libiodine"
repository = "https://github.com/OwlHowlinMornSky/libiodine"
license = "Apache-2.0"

[features]
default = ["jpg", "png", "webp", "gif", "tiff", "parallel"]
jpg = ["dep:mozjpeg-sys", "image/jpeg"]
png = ["dep:oxipng", "dep:lodepng", "dep:imagequant", "image/png"]
webp = ["dep:webp", "image/webp"]
gif = ["dep:gifsicle", "image/gif"]
tiff = ["image/tiff"]
parallel = ["oxipng?/parallel", "imagequant?/threads", "dssim/threads"]

[dependencies]
mozjpeg-sys = { version = "2.2", optional = true }
oxipng = { version = "9.1", default-features = false, features = ["filetime", "zopfli"], optional = true }
libc = "0.2"
gifsicle = { version = "1.95", optional = true }
webp = { version = "0.3", optional = true }
infer = "0.16"
image = { version = "0.25", default-features = false }
img-parts = "0.3"
bytes = "1.9"
lodepng = { version = "3.10", optional = true }
imagequant = { version = "4.3", optional = true, default-features = false }
tiff = { version = "0.9" }
kamadak-exif = "0.6"

[dev-dependencies]
dssim = { version = "3.3.2", default-features = false, features = ["no-macos-vimage"] }

[lib]
name = "libiodine"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
test = true
doctest = false
bench = false
doc = false
